src/tests/snapshots/Shlang__tests__parser_test__call_as_val.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"a(1,1,1)+1;\")"
---
Ok(
    Spanned {
        unspanned: BinaryNode(
            BinaryNode {
                kind: ADD,
                left: Spanned {
                    unspanned: Call(
                        Call {
                            callee: Spanned {
                                unspanned: Variable(
                                    Variable {
                                        name: "a",
                                    },
                                ),
                                span: (
                                    0,
                                    1,
                                ),
                            },
                            args: [
                                Spanned {
                                    unspanned: Value(
                                        Num(
                                            1.0,
                                        ),
                                    ),
                                    span: (
                                        2,
                                        3,
                                    ),
                                },
                                Spanned {
                                    unspanned: Value(
                                        Num(
                                            1.0,
                                        ),
                                    ),
                                    span: (
                                        4,
                                        5,
                                    ),
                                },
                                Spanned {
                                    unspanned: Value(
                                        Num(
                                            1.0,
                                        ),
                                    ),
                                    span: (
                                        6,
                                        7,
                                    ),
                                },
                            ],
                        },
                    ),
                    span: (
                        1,
                        8,
                    ),
                },
                right: Spanned {
                    unspanned: Value(
                        Num(
                            1.0,
                        ),
                    ),
                    span: (
                        9,
                        10,
                    ),
                },
            },
        ),
        span: (
            8,
            9,
        ),
    },
)
