src/tests/snapshots/Shlang__tests__parser_test__call_with_paren.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"a((1),1,1);\")"
---
Ok(
    Spanned {
        unspanned: Call(
            Call {
                callee: Spanned {
                    unspanned: Variable(
                        Variable {
                            name: "a",
                        },
                    ),
                    span: (
                        0,
                        1,
                    ),
                },
                args: [
                    Spanned {
                        unspanned: Value(
                            Num(
                                1.0,
                            ),
                        ),
                        span: (
                            3,
                            4,
                        ),
                    },
                    Spanned {
                        unspanned: Value(
                            Num(
                                1.0,
                            ),
                        ),
                        span: (
                            6,
                            7,
                        ),
                    },
                    Spanned {
                        unspanned: Value(
                            Num(
                                1.0,
                            ),
                        ),
                        span: (
                            8,
                            9,
                        ),
                    },
                ],
            },
        ),
        span: (
            1,
            10,
        ),
    },
)
