src/tests/snapshots/Shlang__tests__parser_test__empty_call.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"a();\")"
---
Ok(
    Spanned {
        unspanned: Call(
            Call {
                callee: Spanned {
                    unspanned: Variable(
                        "a",
                    ),
                    span: (
                        0,
                        1,
                    ),
                },
                args: [],
            },
        ),
        span: (
            1,
            3,
        ),
    },
)
