src/tests/snapshots/Shlang__tests__parser_test__multiple_unary.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"!true + !true;\")"
---
Ok(
    Spanned {
        unspanned: BinaryNode(
            BinaryNode {
                kind: ADD,
                left: Spanned {
                    unspanned: UnaryNode(
                        UnaryNode {
                            kind: NOT,
                            object: Spanned {
                                unspanned: Value(
                                    Bool(
                                        true,
                                    ),
                                ),
                                span: (
                                    1,
                                    5,
                                ),
                            },
                        },
                    ),
                    span: (
                        1,
                        5,
                    ),
                },
                right: Spanned {
                    unspanned: UnaryNode(
                        UnaryNode {
                            kind: NOT,
                            object: Spanned {
                                unspanned: Value(
                                    Bool(
                                        true,
                                    ),
                                ),
                                span: (
                                    9,
                                    13,
                                ),
                            },
                        },
                    ),
                    span: (
                        9,
                        13,
                    ),
                },
            },
        ),
        span: (
            6,
            7,
        ),
    },
)
