src/tests/snapshots/Shlang__tests__parser_test__parse_nested_paren.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"((1+2)+(1+2));\")"
---
Ok(
    Spanned {
        unspanned: BinaryNode(
            BinaryNode {
                kind: ADD,
                left: Spanned {
                    unspanned: BinaryNode(
                        BinaryNode {
                            kind: ADD,
                            left: Spanned {
                                unspanned: Value(
                                    Num(
                                        1.0,
                                    ),
                                ),
                                span: (
                                    2,
                                    3,
                                ),
                            },
                            right: Spanned {
                                unspanned: Value(
                                    Num(
                                        2.0,
                                    ),
                                ),
                                span: (
                                    4,
                                    5,
                                ),
                            },
                        },
                    ),
                    span: (
                        3,
                        4,
                    ),
                },
                right: Spanned {
                    unspanned: BinaryNode(
                        BinaryNode {
                            kind: ADD,
                            left: Spanned {
                                unspanned: Value(
                                    Num(
                                        1.0,
                                    ),
                                ),
                                span: (
                                    8,
                                    9,
                                ),
                            },
                            right: Spanned {
                                unspanned: Value(
                                    Num(
                                        2.0,
                                    ),
                                ),
                                span: (
                                    10,
                                    11,
                                ),
                            },
                        },
                    ),
                    span: (
                        9,
                        10,
                    ),
                },
            },
        ),
        span: (
            6,
            7,
        ),
    },
)
