src/tests/snapshots/Shlang__tests__parser_test__parse_paren.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"(1+2+b);\")"
---
Ok(
    Spanned {
        unspanned: BinaryNode(
            BinaryNode {
                kind: ADD,
                left: Spanned {
                    unspanned: Value(
                        Num(
                            1.0,
                        ),
                    ),
                    span: (
                        1,
                        2,
                    ),
                },
                right: Spanned {
                    unspanned: BinaryNode(
                        BinaryNode {
                            kind: ADD,
                            left: Spanned {
                                unspanned: Value(
                                    Num(
                                        2.0,
                                    ),
                                ),
                                span: (
                                    3,
                                    4,
                                ),
                            },
                            right: Spanned {
                                unspanned: Variable(
                                    Variable {
                                        name: "b",
                                    },
                                ),
                                span: (
                                    5,
                                    6,
                                ),
                            },
                        },
                    ),
                    span: (
                        4,
                        5,
                    ),
                },
            },
        ),
        span: (
            2,
            3,
        ),
    },
)
