src/tests/snapshots/Shlang__tests__parser_test__single_var_expr_decl.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"var a;\")"
---
Ok(
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: Value(
                        Null,
                    ),
                    span: (
                        4,
                        5,
                    ),
                },
            },
        ),
        span: (
            4,
            6,
        ),
    },
)
